demo04/dov-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  labels:
    name: dov-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      name: dov-pod
  template:
    metadata:
      name: dov-pod
      labels:
        name: dov-pod
        dept: engg
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                name: dov-pod
                dept: engg
            topologyKey: doks.digitalocean.com/node-id
      containers:
      - name: dov-container
        image: stackupiss/dov-bear:v2 
        imagePullPolicy: IfNotPresent
        ports:
        - name: dov-port 
          containerPort: 3000

---
apiVersion: v1 
kind: Service 
metadata:
  name: dov-svc
  labels:
    name: dov-svc
spec:
  type: ClusterIP
  selector: 
    name: dov-pod
  ports:
  - port: 8080
    targetPort: dov-port
